# joes-book

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  Todos.db  docker-compose.yaml  index.html  next.config.js  output.css  package-lock.json  package.json  rustc-ice-2024-01-19T16_07_21-83356.txt  rustc-ice-2024-01-19T16_07_21-83357.txt  rustc-ice-2024-01-19T16_07_39-83402.txt  rustc-ice-2024-01-19T16_07_39-83403.txt  rustc-ice-2024-01-19T16_07_42-83420.txt  rustc-ice-2024-01-19T16_07_42-83421.txt  rustc-ice-2024-01-19T16_08_08-83477.txt  rustc-ice-2024-01-19T16_08_08-83478.txt  tailwind.config.js
.devcontainer/: devcontainer.json
.sqlx/: query-00c8c76031328110f1fbe8ab091041bed2be0af029221d5aa162d269fc5712ce.json  query-02686603480820a85a31eb598febf8e849dd60499db12f970f6b571e0c99a58e.json  query-06c53da388d101aa64f1e652898328cec356190dc81d6beb4e4f27d2eac4e898.json  query-0e8a4387fae0d598ce5b19f85bf5e6f5ad27a6ef8f79f68c76e259fc3be936eb.json  query-11443d26a2288e15d674cb1b87d03c6924318aeb6a6d44f5e144232a5394347f.json  query-1645a2ae6485cdd6c43fea98d63a4e49f90f49ae17fea3cf99a3078b0e396e6d.json  query-18a4de8cf51656391b56a97c15445071784d66c07b2a4b33cb187a2216cd3ea4.json  query-18afbc4a1b684afbf45ebb4a82eb0b57ec5b9d456936f6a480a4f06d25b69c1e.json  query-1b98e3e01a43d656e1f9d08d86c9830e520fa30d7c2b172d33b2de8d41771402.json  query-2539713484d07903469d03c199c7869836901be841e1a18afa17efb092434bfd.json  query-2e13c29fe9cd587e83116a9084aee8d3001fa6979bc3c147ce59593f3eeb418f.json  query-303268e0eb5af389df218dc3f7628c4aa1e6520afa32293d060ac0f7d8f2d597.json  query-3b8e5760ab036bc781b39f7e9a0d0b23c2f7cc1251b557749eaaab6761bbedd5.json  query-3bd2c2d5286a88517181d92c66bc77765ea97eea9f624de9cdadbafda7b3ce13.json  query-4d5495c7afef2fda5e5d949d693bc93f818a368f95b9c85cc787860040600644.json  query-556fa8e9302c80da4cd092aab77011766e7515b13c2b3933c2bd812537a28516.json  query-61f722322213ed771750cecaa7065afb0fb0c509562f21f93148c0e4a9bfe634.json  query-625f2bedd4c47d10104372b5c2bde95eeed7a8d25ef78ae13bff557b3cc845f9.json  query-628ce531fc1141112995c6f571ce8b6b6807ef826ac60b7b056c931bb4ef9672.json  query-653508cb3b0da81e283875bc5394e86e45e8fef1ea41167f132fa74edaf820e6.json  query-765eb70e01d761c972776adc2fe777b43b6f3717840c8d3bd789e5833a2bd9f5.json  query-7fb8ca9344f6b83a3f5cadfc0ef397a54c3ecf8bf4654af7826b93a5195ff788.json  query-829ca4e7021f4b94dc116104e7404363ba97434c9d199d68f4ae9d63da737e56.json  query-932f98b0831058a5fa51ece3bef8fd8bc323a2fee62658d1b0b7a326b26d45eb.json  query-9c58e0bec2f803856d17b6779e4f7c56e23d86875ac6493b61600c8dcbdd5aa7.json  (+20 more)
joes-book/: Cargo.toml
joes-book/.sqlx/: query-0a996be0ec15e5f5afd7a8dae123c7d03a9d3a363b24474336a52512e658770b.json  query-107ae92c92791716fa21acf73b2ea1ab87c99c62cdeb76e5cd4aabbafdb138c2.json  query-21142e33d1d2aee421fdff7529f9e5a903fa4f5ca661edf2df842d4d02ced1ac.json  query-299c766a4146d2f2fcce48333c8cee079b8c9ceaf20f5467e1e764ba2e4b60be.json  query-3a3817e62c786f7c88e3b9ef10ed7fa14905a268299ff3877aea496308fd5a5a.json  query-50ab15e4e951c18e7b4f82760185cb34a6e9d9dfefb39f7114f764d57b26f7cf.json  query-5566075f84622583512698acd343c9307adb34a896a07384e7917dff2b79c256.json  query-69f37ce36f0847a100b7de094c1663cb2338161be75cc45038c9e5be8d70fb01.json  query-74487bff7b243073e8c9b6f008f9feb69f5c400de6b6e0bf6c86724f5cb95857.json  query-7e93633e5ad7628d330c3130a855e4d25aa8fdfaab6066a2784c6ea23b52a7e0.json  query-8f1385508301e81356897d377d8f74e16429495ab1dea93d6482c2d6b6c49dd6.json  query-8f2fb935861b092d200ac7e400f7f6153421ed00469c587595bc1b59089e84b9.json  query-91200aa2c3118f63efb57451e5794f29d65a13ec5ed56b52f8c1908747e0d310.json  query-9a9742b6aad45c87b8ebfa6c6976a482f45cdc7bbb64f13aa5155f6c395d9c81.json  query-a544bba5c4d20c6a21e296159537a009bfe97d283e077aac9b1b9d156b1fe932.json  query-a7a4a5406ce3617860ed62a95d293d39055bdf4826d20c2dcf359f4fe62c9592.json  query-ba3283a99cb47695de0aad68f7e9ef128e391265f45ad1efdcbd3074d9af6c05.json  query-c9a8d9dd55b5c8208153895ecd3d63f413e7f502cae38fc6b1c12843c850af2a.json  query-dae2671e394eaccc57720c4354481005a929aa1abf75d80407158b0489146bfe.json  query-db9436ed489678f877f6ac3a3cd90f723a829f143c699a0cbeebc280cdee970a.json  query-dd411c244b78f2b25681c7fd75af7828b36bdf165f9dcf5b285c2e6bcb092434.json  query-ea2386875ebc60cca11a1956274d3cc02da7857f2f59e74c6c4052378e3745a1.json
joes-book/migrations/: 20240412000439_foo.sql
joes-book/src/: auth.rs  lib.rs  main.rs
joes-book/src/db/: event.rs  user_input.rs
joes-book/src/routes/: finish_signup.rs  session.rs  signup.rs
joes-book/src/routes/book/: create.rs
joes-book/src/routes/chapter/: create.rs
joes-book/src/templates/: book_list.rs  chapter_admin.rs  chapter_create.rs  chapter_list.rs  chapter_open.rs  mod.rs  team_select.rs
lib/: books.tsx  (+5 more)
(+168 files in other folders)
