[package]
name = "joes-book"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
axum-ctx = "0.4.0"
axum-login = "0.12.0"
bcrypt = "0.15.0"
dotenvy = "0.15.7"
itertools = "0.12.1"
maud = { version = "0.26.0", features = ["axum"] }
serde = {version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["raw_value"] }
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
shuttle-shared-db = { version = "0.47.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "json", "macros"] }
thiserror = "1.0.58"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tower-sessions = { version = "0.9.1", features = ["postgres-store"] }

[dev-dependencies]
axum-macros = "0.4.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1
