[package]
name = "joes-book"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
axum = { version = "0.8.1" }
axum-ctx = { path = "../axum-ctx" }
axum-extra = { version = "0.10.0", features = ["cookie"] }
axum-login = "0.17.0"
bcrypt = "0.17.0"
cf-turnstile = "0.2.0"
dotenvy = "0.15.7"
itertools = "0.14.0"
maud = { version = "0.27.0", features = ["axum"] }
oauth2 = "5.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
shuttle-axum = { version = "0.52.0", optional = true }
shuttle-runtime = { version = "0.52.0", optional = true }
shuttle-shared-db = { version = "0.52.0", features = ["postgres", "sqlx"], optional = true }
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls", "postgres", "json", "macros" ] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = ["shuttle"]
shuttle = ["dep:shuttle-axum", "dep:shuttle-runtime", "dep:shuttle-shared-db"]

[dev-dependencies]
axum-macros = "0.5.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1
